--- a/resources/sass/partials/_checkout.scss
+++ b/resources/sass/partials/_checkout.scss
@@ -1,7 +1,5 @@
 #checkout {
-  .mycontainer {
-    padding: 20px 0 35px;
-  }
+
 
   .home-btn {
     &:hover {
@@ -25,11 +23,15 @@ label {
   margin-bottom: 5px;
 }
 
+form {
+  margin: 20px 0;
+}
+
 .wrapper {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 30px;
-  align-items: flex-start;
+  // display: flex;
+  // justify-content: space-between;
+  // align-items: flex-start;
+  margin-bottom: 30px;
   .card-user {
     padding: 25px;
     background: url("/img/home/cattura.png") center center;
@@ -59,7 +61,11 @@ label {
       display: flex;
       margin-top: 20px;
       .user-email{
+        width: 50%;
         margin-right: 30px;
+      }
+      .user-telephone{
+        width: 50%;
       } 
     }
     .user-address {
@@ -73,33 +79,91 @@ label {
       border-radius: 10px;
     }
   }
+}
 
-  .checkout-cart {
-    width: 35%;
-    position: relative;
-    padding: 0 0 10px;
-    border-radius: 20px;
-    overflow: hidden;
+// Cart
+.checkout-cart {
+  // width: 30%;
+  // position: sticky;
+  // top: 0;
+  // height: 100%;
+  margin-bottom: 30px;
+  padding: 20px;
+  border-radius: 20px;
+  overflow: hidden;
+  box-shadow: 0 0 7px lightgrey;
 
-    .cart-top {
-      width: 100%;
-      text-align: center;
-      margin-bottom: 10px;
-      padding: 15px;
-      font-size: 15px;
-      color: white;
-      text-transform: uppercase;
-      font-weight: bold;
-      background-color: $brand-orange;
+  .cart-top {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 10px;
+    padding: 15px;
+    font-size: 15px;
+    color: white;
+    text-transform: uppercase;
+    font-weight: bold;
+    background-color: $brand-orange;
+  }
+
+  .dish-price {
+    display: inline-block;
+    width: 20%;
+    text-align: right;
+  }
+  .show-cart {
+    padding: 8px;
+    border-bottom: 2px solid rgba(157, 157, 157, 0.2);
+    border-radius: 10px;
+
+    .quantity-section {
+      display: inline-block;
+      width: 25%;
+
+      .quantity-btn {
+        display: inline-block;
+        width: 20px;
+        height: 20px;
+        text-align: center;
+        margin-right: 2px;
+        font: 13px Arial, sans-serif;
+        font-weight: bold;
+        background-color: white;
+        color: $brand-orange;
+        border: 2px solid $brand-orange;
+        border-radius: 100%;
+        transition: all 0.4s;
+
+        &:hover {
+          cursor: pointer;
+          background-color: $brand-orange;
+          color: white;
+        }
+      }
+      .plus-sign {
+       line-height: 1.34em;
+      }
+      .quantity-number {
+        margin-right: 2px;
+      }
     }
 
-    .dish-price {
+    .dish-name {
       display: inline-block;
-      width: 20%;
-      text-align: right;
+      width: 50%;
+      font-size: 13px;
+    }
+    .dish-price {
+      font-size: 14px;
     }
   }
-  
+  .total-cart {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+    padding: 8px 27px 5px 20px;
+    font-weight: bold;
+    font-size: 15px;
+  }
 }
 
 // Braintree
