--- a/resources/sass/partials/_header.scss
+++ b/resources/sass/partials/_header.scss
@@ -1,4 +1,3 @@
-
 .user-logout {
   display: flex;
   align-items: center;
@@ -52,7 +51,14 @@
     }
   }
 
+  .dropdown-item {
+    width: 191px;
+    text-align: center;
+  }
+
   .login {
+    display: inline-block;
+    width: 191px;
     padding: 8px 50px;
     background-color: $brand-orange;
     border-radius: 5px;
@@ -61,6 +67,7 @@
     color: $brand-white;
     font-weight: 700;
     transition: all 0.4s;
+    text-align: center;
 
     &:hover {
       text-decoration: none;
@@ -86,4 +93,47 @@
       background-color: $brand-white;
     }
   }
+  .hamburger {
+    display: none;
+  }
+}
+
+@media (max-width: 768px) {
+
+  .back--none {
+       margin-top: 217px;
+    }
+  .register-header-top, .login-header-top {
+
+    .route-in-out, .user-logout{
+      position: absolute;
+      top: 88px;
+      right: 100%;
+      padding: 50px 30px;
+      display: flex;
+      flex-direction: column;
+      align-items: baseline;
+      background-color: #F8FAFC;
+      padding-bottom: 50px;
+    }
+
+    .menu--open {
+      right: 0px;
+      width: 100%;
+    }
+    
+    h1 {
+      font-size: 30px;
+    }
+    .register {
+      margin-top: 30px;
+      margin-left: 0px;
+    }
+
+    .hamburger {
+      display: block;
+      font-size: 30px;
+    }
+  }
+
 }
