fix responsive header

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -907,6 +907,11 @@ footer #copyright span {
   font-size: 14px;
 }
 
+@media only screen and (max-width: 768px) {
+  #cart .back--none {
+    margin-top: 217px;
+  }
+}
 @media only screen and (max-width: 720px) {
   .menu-container .dish-card {
     height: 140px;
