--- a/resources/sass/partials/_header.scss
+++ b/resources/sass/partials/_header.scss
@@ -69,7 +69,7 @@
 @media (max-width: 768px) {
 
   .back--none {
-       margin-top: 217px;
+       margin-top: 180px;
     }
   .register-header-top, .login-header-top {
 
@@ -77,7 +77,7 @@
       position: absolute;
       top: 88px;
       right: 100%;
-      padding: 50px 30px;
+      padding: 0px 30px 50px;
       display: flex;
       flex-direction: column;
       align-items: baseline;
