--- a/resources/sass/partials/_success.scss
+++ b/resources/sass/partials/_success.scss
@@ -9,6 +9,15 @@ main #success {
         img {
             margin: 30px 0px;
             height: 200px;          
-        }     
+        }   
+        
+        .home-btn {
+            display: inline-block;
+            margin-top: 50px;
+            &:hover {
+              color: $brand-orange;
+              background-color: white;
+            }
+          }
     }
 }
