--- a/resources/sass/partials/_checkout.scss
+++ b/resources/sass/partials/_checkout.scss
@@ -196,7 +196,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.9);
+  background-color: rgba(0, 0, 0, 0.90);
 
   svg {
     position: fixed;
@@ -265,24 +265,24 @@ body {
 
   @-webkit-keyframes stroke-color {
     0%  { stroke: #3498DB; }
-    24% { stroke: #643232; }
-    25% { stroke: #327864; }
-    49% { stroke: #327864; }
-    50% { stroke: #32326e; }
-    74% { stroke: #32326e; }
-    75% { stroke: #78325a; }
-    99% { stroke: #78325a; }
+    24% { stroke: #a70053; }
+    25% { stroke: rgba(0, 105, 54, 0.9); }
+    49% { stroke: rgba(11, 218, 119, 0.9); }
+    50% { stroke: $brand-heavenly; }
+    74% { stroke: $brand-heavenly; }
+    75% { stroke: #f8f0f5; }
+    99% { stroke: rgba(255, 168, 3, 0.8) }
   }
 
   @keyframes stroke-color {
     0%  { stroke: #3498DB; }
-    24% { stroke: #643232; }
-    25% { stroke: #327864; }
-    49% { stroke: #327864; }
-    50% { stroke: #32326e; }
-    74% { stroke: #32326e; }
-    75% { stroke: #78325a; }
-    99% { stroke: #78325a; }
+    24% { stroke: #a70053; }
+    25% { stroke: rgba(0, 189, 97, 1); }
+    49% { stroke: rgba(11, 218, 119, 1); }
+    50% { stroke: rgba(255, 168, 3, 0.8); }
+    74% { stroke: rgba(255, 168, 3, 1); }
+    75% { stroke: rgb(8, 152, 160); }
+    99% { stroke: rgb(0, 237, 250); }
   }
 }
 
